cdk.out/ApiStack-Production.template.json
{
 "Resources": {
  "Vpcproduction70517E13": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ApiStack-Production/Vpc-production"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/Vpc-production/Resource"
   }
  },
  "VpcproductionPublicSubnet1Subnet0DDF2C75": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-west-1a",
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ApiStack-Production/Vpc-production/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpcproduction70517E13"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/Vpc-production/PublicSubnet1/Subnet"
   }
  },
  "VpcproductionPublicSubnet1RouteTable9F26980B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ApiStack-Production/Vpc-production/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpcproduction70517E13"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/Vpc-production/PublicSubnet1/RouteTable"
   }
  },
  "VpcproductionPublicSubnet1RouteTableAssociationE15BA6D7": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcproductionPublicSubnet1RouteTable9F26980B"
    },
    "SubnetId": {
     "Ref": "VpcproductionPublicSubnet1Subnet0DDF2C75"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/Vpc-production/PublicSubnet1/RouteTableAssociation"
   }
  },
  "VpcproductionPublicSubnet1DefaultRoute75FF73F3": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcproductionIGWC3E220C9"
    },
    "RouteTableId": {
     "Ref": "VpcproductionPublicSubnet1RouteTable9F26980B"
    }
   },
   "DependsOn": [
    "VpcproductionVPCGW80DA5C44"
   ],
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/Vpc-production/PublicSubnet1/DefaultRoute"
   }
  },
  "VpcproductionPublicSubnet1EIPF9AFE689": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ApiStack-Production/Vpc-production/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/Vpc-production/PublicSubnet1/EIP"
   }
  },
  "VpcproductionPublicSubnet1NATGatewayD3AD9E84": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "VpcproductionPublicSubnet1EIPF9AFE689",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "VpcproductionPublicSubnet1Subnet0DDF2C75"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ApiStack-Production/Vpc-production/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "VpcproductionPublicSubnet1DefaultRoute75FF73F3",
    "VpcproductionPublicSubnet1RouteTableAssociationE15BA6D7"
   ],
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/Vpc-production/PublicSubnet1/NATGateway"
   }
  },
  "VpcproductionPublicSubnet2SubnetFEF797A4": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-west-1b",
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ApiStack-Production/Vpc-production/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpcproduction70517E13"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/Vpc-production/PublicSubnet2/Subnet"
   }
  },
  "VpcproductionPublicSubnet2RouteTable995A695F": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ApiStack-Production/Vpc-production/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpcproduction70517E13"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/Vpc-production/PublicSubnet2/RouteTable"
   }
  },
  "VpcproductionPublicSubnet2RouteTableAssociationFA4FE5ED": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcproductionPublicSubnet2RouteTable995A695F"
    },
    "SubnetId": {
     "Ref": "VpcproductionPublicSubnet2SubnetFEF797A4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/Vpc-production/PublicSubnet2/RouteTableAssociation"
   }
  },
  "VpcproductionPublicSubnet2DefaultRouteBA427422": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcproductionIGWC3E220C9"
    },
    "RouteTableId": {
     "Ref": "VpcproductionPublicSubnet2RouteTable995A695F"
    }
   },
   "DependsOn": [
    "VpcproductionVPCGW80DA5C44"
   ],
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/Vpc-production/PublicSubnet2/DefaultRoute"
   }
  },
  "VpcproductionPublicSubnet2EIPF83C0371": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ApiStack-Production/Vpc-production/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/Vpc-production/PublicSubnet2/EIP"
   }
  },
  "VpcproductionPublicSubnet2NATGatewayF3929787": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "VpcproductionPublicSubnet2EIPF83C0371",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "VpcproductionPublicSubnet2SubnetFEF797A4"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ApiStack-Production/Vpc-production/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "VpcproductionPublicSubnet2DefaultRouteBA427422",
    "VpcproductionPublicSubnet2RouteTableAssociationFA4FE5ED"
   ],
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/Vpc-production/PublicSubnet2/NATGateway"
   }
  },
  "VpcproductionPrivateSubnet1Subnet8263D914": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-west-1a",
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "ApiStack-Production/Vpc-production/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpcproduction70517E13"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/Vpc-production/PrivateSubnet1/Subnet"
   }
  },
  "VpcproductionPrivateSubnet1RouteTable87E134DD": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ApiStack-Production/Vpc-production/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpcproduction70517E13"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/Vpc-production/PrivateSubnet1/RouteTable"
   }
  },
  "VpcproductionPrivateSubnet1RouteTableAssociationEC02C5EC": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcproductionPrivateSubnet1RouteTable87E134DD"
    },
    "SubnetId": {
     "Ref": "VpcproductionPrivateSubnet1Subnet8263D914"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/Vpc-production/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "VpcproductionPrivateSubnet1DefaultRouteB46C4976": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcproductionPublicSubnet1NATGatewayD3AD9E84"
    },
    "RouteTableId": {
     "Ref": "VpcproductionPrivateSubnet1RouteTable87E134DD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/Vpc-production/PrivateSubnet1/DefaultRoute"
   }
  },
  "VpcproductionPrivateSubnet2Subnet75FD0EC7": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-west-1b",
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "ApiStack-Production/Vpc-production/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpcproduction70517E13"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/Vpc-production/PrivateSubnet2/Subnet"
   }
  },
  "VpcproductionPrivateSubnet2RouteTable8FFB58FA": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ApiStack-Production/Vpc-production/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpcproduction70517E13"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/Vpc-production/PrivateSubnet2/RouteTable"
   }
  },
  "VpcproductionPrivateSubnet2RouteTableAssociation0E0CD183": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcproductionPrivateSubnet2RouteTable8FFB58FA"
    },
    "SubnetId": {
     "Ref": "VpcproductionPrivateSubnet2Subnet75FD0EC7"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/Vpc-production/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "VpcproductionPrivateSubnet2DefaultRoute66A4CA6F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcproductionPublicSubnet2NATGatewayF3929787"
    },
    "RouteTableId": {
     "Ref": "VpcproductionPrivateSubnet2RouteTable8FFB58FA"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/Vpc-production/PrivateSubnet2/DefaultRoute"
   }
  },
  "VpcproductionIGWC3E220C9": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ApiStack-Production/Vpc-production"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/Vpc-production/IGW"
   }
  },
  "VpcproductionVPCGW80DA5C44": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "VpcproductionIGWC3E220C9"
    },
    "VpcId": {
     "Ref": "Vpcproduction70517E13"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/Vpc-production/VPCGW"
   }
  },
  "VpcproductionRestrictDefaultSecurityGroupCustomResource6E2E594A": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "Vpcproduction70517E13",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "084828585414"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/Vpc-production/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:eu-west-1:084828585414:security-group/",
             {
              "Fn::GetAtt": [
               "Vpcproduction70517E13",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-084828585414-eu-west-1",
     "S3Key": "7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs20.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200",
    "aws:asset:property": "Code"
   }
  },
  "EcsClusterproduction5DB950F3": {
   "Type": "AWS::ECS::Cluster",
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/EcsCluster-production/Resource"
   }
  },
  "TaskDefproductionTaskRoleF088A7F3": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/TaskDef-production/TaskRole/Resource"
   }
  },
  "TaskDefproduction6B864ADF": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Essential": true,
      "Image": "084828585414.dkr.ecr.eu-west-1.amazonaws.com/eclaut-backend-api-production:latest",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "TaskDefproductionAppContainerproductionLogGroup0AE2620D"
        },
        "awslogs-stream-prefix": "ecs-production",
        "awslogs-region": "eu-west-1"
       }
      },
      "Memory": 2048,
      "Name": "AppContainer-production",
      "PortMappings": [
       {
        "ContainerPort": 3000,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "1024",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "TaskDefproductionExecutionRole614E5C66",
      "Arn"
     ]
    },
    "Family": "ApiStackProductionTaskDefproduction85FF00A5",
    "Memory": "2048",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "TaskDefproductionTaskRoleF088A7F3",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/TaskDef-production/Resource"
   }
  },
  "TaskDefproductionAppContainerproductionLogGroup0AE2620D": {
   "Type": "AWS::Logs::LogGroup",
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/TaskDef-production/AppContainer-production/LogGroup/Resource"
   }
  },
  "TaskDefproductionExecutionRole614E5C66": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/TaskDef-production/ExecutionRole/Resource"
   }
  },
  "TaskDefproductionExecutionRoleDefaultPolicy71EA5A47": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "TaskDefproductionAppContainerproductionLogGroup0AE2620D",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "TaskDefproductionExecutionRoleDefaultPolicy71EA5A47",
    "Roles": [
     {
      "Ref": "TaskDefproductionExecutionRole614E5C66"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/TaskDef-production/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "LBproductionFD5DBA34": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "LBproductionSecurityGroup868A4402",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "VpcproductionPublicSubnet1Subnet0DDF2C75"
     },
     {
      "Ref": "VpcproductionPublicSubnet2SubnetFEF797A4"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "VpcproductionPublicSubnet1DefaultRoute75FF73F3",
    "VpcproductionPublicSubnet1RouteTableAssociationE15BA6D7",
    "VpcproductionPublicSubnet2DefaultRouteBA427422",
    "VpcproductionPublicSubnet2RouteTableAssociationFA4FE5ED"
   ],
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/LB-production/Resource"
   }
  },
  "LBproductionSecurityGroup868A4402": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB ApiStackProductionLBproduction44D7B4FD",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "Vpcproduction70517E13"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/LB-production/SecurityGroup/Resource"
   }
  },
  "LBproductionSecurityGrouptoApiStackProductionFargateServiceproductionSecurityGroup6945027E3000AB5F21AD": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "FargateServiceproductionSecurityGroupD73B4774",
      "GroupId"
     ]
    },
    "FromPort": 3000,
    "GroupId": {
     "Fn::GetAtt": [
      "LBproductionSecurityGroup868A4402",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "ToPort": 3000
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/LB-production/SecurityGroup/to ApiStackProductionFargateServiceproductionSecurityGroup6945027E:3000"
   }
  },
  "LBproductionListenerproduction3561A6F5": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "LBproductionListenerproductionAppTargetproductionGroup7CA5500C"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "LBproductionFD5DBA34"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/LB-production/Listener-production/Resource"
   }
  },
  "LBproductionListenerproductionAppTargetproductionGroup7CA5500C": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "Port": 3000,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "Vpcproduction70517E13"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/LB-production/Listener-production/AppTarget-productionGroup/Resource"
   }
  },
  "FargateServiceproductionService64CFCA9D": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "EcsClusterproduction5DB950F3"
    },
    "DeploymentConfiguration": {
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DesiredCount": 3,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "AppContainer-production",
      "ContainerPort": 3000,
      "TargetGroupArn": {
       "Ref": "LBproductionListenerproductionAppTargetproductionGroup7CA5500C"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "FargateServiceproductionSecurityGroupD73B4774",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "VpcproductionPrivateSubnet1Subnet8263D914"
       },
       {
        "Ref": "VpcproductionPrivateSubnet2Subnet75FD0EC7"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "TaskDefproduction6B864ADF"
    }
   },
   "DependsOn": [
    "LBproductionListenerproductionAppTargetproductionGroup7CA5500C",
    "LBproductionListenerproduction3561A6F5",
    "TaskDefproductionTaskRoleF088A7F3"
   ],
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/FargateService-production/Service"
   }
  },
  "FargateServiceproductionSecurityGroupD73B4774": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "ApiStack-Production/FargateService-production/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "Vpcproduction70517E13"
    }
   },
   "DependsOn": [
    "TaskDefproductionTaskRoleF088A7F3"
   ],
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/FargateService-production/SecurityGroup/Resource"
   }
  },
  "FargateServiceproductionSecurityGroupfromApiStackProductionLBproductionSecurityGroup25C521C03000B8F13129": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Load balancer to target",
    "FromPort": 3000,
    "GroupId": {
     "Fn::GetAtt": [
      "FargateServiceproductionSecurityGroupD73B4774",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "LBproductionSecurityGroup868A4402",
      "GroupId"
     ]
    },
    "ToPort": 3000
   },
   "DependsOn": [
    "TaskDefproductionTaskRoleF088A7F3"
   ],
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/FargateService-production/SecurityGroup/from ApiStackProductionLBproductionSecurityGroup25C521C0:3000"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/81WS08bMRD+Ld1jZbZA1aritkkpioQgSiIORVHl2EMw8dpbP5bSKP+d8WOThZRL20MOUex5fPt5/M3snpYnXz6Vx+/ooz1ifHUkxaJcTx1lK4KmH2tgp+X6pmG366Kmv6rftjgr3hebORneqZvxkIz9Qgo29QsFDmNoS4WkCyGFe/quFcRoUrQNG/G8ZoKbgdRslfc1bRLIqLlWl9Qrdl+cOeOBFKJpPw9fhVNrxVKN0FNxbsDaazU0QJ3QKlEjB8IiEuH8iroL6uCRPhVnt+iZHwzBw2DxZpmixJKwwmqivYMZXUjY2Xe2ylrNRATeBofF+Wgc/nboZGxEi8v/rtg7Ku0B3MW/0TgcJgdCI6lwpBwYlEunoTT78q5yOC3va1COTIF5g3wvjPYNagvJ5kdxsMyIZguND5dSP1ZSXnu30F7xzDS3w0gtA6GJl3hwRGIUSUihI [...]
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Production/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "LoadBalancerDNSproduction": {
   "Value": {
    "Fn::GetAtt": [
     "LBproductionFD5DBA34",
     "DNSName"
    ]
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
