cdk.out/ApiStack-Staging.template.json
{
 "Resources": {
  "Vpcstaging6814183B": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ApiStack-Staging/Vpc-staging"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/Vpc-staging/Resource"
   }
  },
  "VpcstagingPublicSubnet1SubnetE1605CF4": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-west-1a",
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ApiStack-Staging/Vpc-staging/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpcstaging6814183B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/Vpc-staging/PublicSubnet1/Subnet"
   }
  },
  "VpcstagingPublicSubnet1RouteTableB90C2CC6": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ApiStack-Staging/Vpc-staging/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpcstaging6814183B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/Vpc-staging/PublicSubnet1/RouteTable"
   }
  },
  "VpcstagingPublicSubnet1RouteTableAssociation4AD4885C": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcstagingPublicSubnet1RouteTableB90C2CC6"
    },
    "SubnetId": {
     "Ref": "VpcstagingPublicSubnet1SubnetE1605CF4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/Vpc-staging/PublicSubnet1/RouteTableAssociation"
   }
  },
  "VpcstagingPublicSubnet1DefaultRoute6C145704": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcstagingIGWFD2437F7"
    },
    "RouteTableId": {
     "Ref": "VpcstagingPublicSubnet1RouteTableB90C2CC6"
    }
   },
   "DependsOn": [
    "VpcstagingVPCGW9E624419"
   ],
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/Vpc-staging/PublicSubnet1/DefaultRoute"
   }
  },
  "VpcstagingPublicSubnet1EIPD322659B": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ApiStack-Staging/Vpc-staging/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/Vpc-staging/PublicSubnet1/EIP"
   }
  },
  "VpcstagingPublicSubnet1NATGatewayA88BC4AA": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "VpcstagingPublicSubnet1EIPD322659B",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "VpcstagingPublicSubnet1SubnetE1605CF4"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ApiStack-Staging/Vpc-staging/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "VpcstagingPublicSubnet1DefaultRoute6C145704",
    "VpcstagingPublicSubnet1RouteTableAssociation4AD4885C"
   ],
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/Vpc-staging/PublicSubnet1/NATGateway"
   }
  },
  "VpcstagingPublicSubnet2Subnet88D40579": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-west-1b",
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ApiStack-Staging/Vpc-staging/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpcstaging6814183B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/Vpc-staging/PublicSubnet2/Subnet"
   }
  },
  "VpcstagingPublicSubnet2RouteTable1A0CFE48": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ApiStack-Staging/Vpc-staging/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpcstaging6814183B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/Vpc-staging/PublicSubnet2/RouteTable"
   }
  },
  "VpcstagingPublicSubnet2RouteTableAssociationE2B16975": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcstagingPublicSubnet2RouteTable1A0CFE48"
    },
    "SubnetId": {
     "Ref": "VpcstagingPublicSubnet2Subnet88D40579"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/Vpc-staging/PublicSubnet2/RouteTableAssociation"
   }
  },
  "VpcstagingPublicSubnet2DefaultRoute3B994035": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcstagingIGWFD2437F7"
    },
    "RouteTableId": {
     "Ref": "VpcstagingPublicSubnet2RouteTable1A0CFE48"
    }
   },
   "DependsOn": [
    "VpcstagingVPCGW9E624419"
   ],
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/Vpc-staging/PublicSubnet2/DefaultRoute"
   }
  },
  "VpcstagingPublicSubnet2EIP97C30AD7": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ApiStack-Staging/Vpc-staging/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/Vpc-staging/PublicSubnet2/EIP"
   }
  },
  "VpcstagingPublicSubnet2NATGatewayD4BBEB18": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "VpcstagingPublicSubnet2EIP97C30AD7",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "VpcstagingPublicSubnet2Subnet88D40579"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ApiStack-Staging/Vpc-staging/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "VpcstagingPublicSubnet2DefaultRoute3B994035",
    "VpcstagingPublicSubnet2RouteTableAssociationE2B16975"
   ],
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/Vpc-staging/PublicSubnet2/NATGateway"
   }
  },
  "VpcstagingPrivateSubnet1Subnet0CCC6C15": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-west-1a",
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "ApiStack-Staging/Vpc-staging/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpcstaging6814183B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/Vpc-staging/PrivateSubnet1/Subnet"
   }
  },
  "VpcstagingPrivateSubnet1RouteTableA33C9A53": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ApiStack-Staging/Vpc-staging/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpcstaging6814183B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/Vpc-staging/PrivateSubnet1/RouteTable"
   }
  },
  "VpcstagingPrivateSubnet1RouteTableAssociation41955FFA": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcstagingPrivateSubnet1RouteTableA33C9A53"
    },
    "SubnetId": {
     "Ref": "VpcstagingPrivateSubnet1Subnet0CCC6C15"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/Vpc-staging/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "VpcstagingPrivateSubnet1DefaultRoute5BCBE075": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcstagingPublicSubnet1NATGatewayA88BC4AA"
    },
    "RouteTableId": {
     "Ref": "VpcstagingPrivateSubnet1RouteTableA33C9A53"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/Vpc-staging/PrivateSubnet1/DefaultRoute"
   }
  },
  "VpcstagingPrivateSubnet2SubnetF4C841C2": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-west-1b",
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "ApiStack-Staging/Vpc-staging/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpcstaging6814183B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/Vpc-staging/PrivateSubnet2/Subnet"
   }
  },
  "VpcstagingPrivateSubnet2RouteTable62AF9881": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ApiStack-Staging/Vpc-staging/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpcstaging6814183B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/Vpc-staging/PrivateSubnet2/RouteTable"
   }
  },
  "VpcstagingPrivateSubnet2RouteTableAssociation48DEA973": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcstagingPrivateSubnet2RouteTable62AF9881"
    },
    "SubnetId": {
     "Ref": "VpcstagingPrivateSubnet2SubnetF4C841C2"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/Vpc-staging/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "VpcstagingPrivateSubnet2DefaultRoute5277E37F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcstagingPublicSubnet2NATGatewayD4BBEB18"
    },
    "RouteTableId": {
     "Ref": "VpcstagingPrivateSubnet2RouteTable62AF9881"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/Vpc-staging/PrivateSubnet2/DefaultRoute"
   }
  },
  "VpcstagingIGWFD2437F7": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "ApiStack-Staging/Vpc-staging"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/Vpc-staging/IGW"
   }
  },
  "VpcstagingVPCGW9E624419": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "VpcstagingIGWFD2437F7"
    },
    "VpcId": {
     "Ref": "Vpcstaging6814183B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/Vpc-staging/VPCGW"
   }
  },
  "VpcstagingRestrictDefaultSecurityGroupCustomResourceF845CD80": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "Vpcstaging6814183B",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "084828585414"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/Vpc-staging/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:eu-west-1:084828585414:security-group/",
             {
              "Fn::GetAtt": [
               "Vpcstaging6814183B",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-084828585414-eu-west-1",
     "S3Key": "7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs20.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200",
    "aws:asset:property": "Code"
   }
  },
  "EcsClusterstaging0EACB67A": {
   "Type": "AWS::ECS::Cluster",
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/EcsCluster-staging/Resource"
   }
  },
  "TaskDefstagingTaskRole37D75883": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/TaskDef-staging/TaskRole/Resource"
   }
  },
  "TaskDefstaging5D54F738": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Essential": true,
      "Image": "084828585414.dkr.ecr.eu-west-1.amazonaws.com/eclaut-backend-api-staging:latest",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "TaskDefstagingAppContainerstagingLogGroup6BB644A8"
        },
        "awslogs-stream-prefix": "ecs-staging",
        "awslogs-region": "eu-west-1"
       }
      },
      "Memory": 512,
      "Name": "AppContainer-staging",
      "PortMappings": [
       {
        "ContainerPort": 3000,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "TaskDefstagingExecutionRole4F48B914",
      "Arn"
     ]
    },
    "Family": "ApiStackStagingTaskDefstaging025BFF08",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "TaskDefstagingTaskRole37D75883",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/TaskDef-staging/Resource"
   }
  },
  "TaskDefstagingAppContainerstagingLogGroup6BB644A8": {
   "Type": "AWS::Logs::LogGroup",
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/TaskDef-staging/AppContainer-staging/LogGroup/Resource"
   }
  },
  "TaskDefstagingExecutionRole4F48B914": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/TaskDef-staging/ExecutionRole/Resource"
   }
  },
  "TaskDefstagingExecutionRoleDefaultPolicy7CF20982": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "TaskDefstagingAppContainerstagingLogGroup6BB644A8",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "TaskDefstagingExecutionRoleDefaultPolicy7CF20982",
    "Roles": [
     {
      "Ref": "TaskDefstagingExecutionRole4F48B914"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/TaskDef-staging/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "LBstaging3F86DA4A": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "LBstagingSecurityGroupB4F388F4",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "VpcstagingPublicSubnet1SubnetE1605CF4"
     },
     {
      "Ref": "VpcstagingPublicSubnet2Subnet88D40579"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "VpcstagingPublicSubnet1DefaultRoute6C145704",
    "VpcstagingPublicSubnet1RouteTableAssociation4AD4885C",
    "VpcstagingPublicSubnet2DefaultRoute3B994035",
    "VpcstagingPublicSubnet2RouteTableAssociationE2B16975"
   ],
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/LB-staging/Resource"
   }
  },
  "LBstagingSecurityGroupB4F388F4": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB ApiStackStagingLBstagingD6E39D06",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "Vpcstaging6814183B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/LB-staging/SecurityGroup/Resource"
   }
  },
  "LBstagingSecurityGrouptoApiStackStagingFargateServicestagingSecurityGroup3A1382083000BFFF929D": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "FargateServicestagingSecurityGroup4BCB28D2",
      "GroupId"
     ]
    },
    "FromPort": 3000,
    "GroupId": {
     "Fn::GetAtt": [
      "LBstagingSecurityGroupB4F388F4",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "ToPort": 3000
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/LB-staging/SecurityGroup/to ApiStackStagingFargateServicestagingSecurityGroup3A138208:3000"
   }
  },
  "LBstagingListenerstaging06F03D5A": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "LBstagingListenerstagingAppTargetstagingGroupC86F11E8"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "LBstaging3F86DA4A"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/LB-staging/Listener-staging/Resource"
   }
  },
  "LBstagingListenerstagingAppTargetstagingGroupC86F11E8": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "Port": 3000,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "Vpcstaging6814183B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/LB-staging/Listener-staging/AppTarget-stagingGroup/Resource"
   }
  },
  "FargateServicestagingService53CE8DE6": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "EcsClusterstaging0EACB67A"
    },
    "DeploymentConfiguration": {
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "AppContainer-staging",
      "ContainerPort": 3000,
      "TargetGroupArn": {
       "Ref": "LBstagingListenerstagingAppTargetstagingGroupC86F11E8"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "FargateServicestagingSecurityGroup4BCB28D2",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "VpcstagingPrivateSubnet1Subnet0CCC6C15"
       },
       {
        "Ref": "VpcstagingPrivateSubnet2SubnetF4C841C2"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "TaskDefstaging5D54F738"
    }
   },
   "DependsOn": [
    "LBstagingListenerstagingAppTargetstagingGroupC86F11E8",
    "LBstagingListenerstaging06F03D5A",
    "TaskDefstagingTaskRole37D75883"
   ],
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/FargateService-staging/Service"
   }
  },
  "FargateServicestagingSecurityGroup4BCB28D2": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "ApiStack-Staging/FargateService-staging/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "Vpcstaging6814183B"
    }
   },
   "DependsOn": [
    "TaskDefstagingTaskRole37D75883"
   ],
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/FargateService-staging/SecurityGroup/Resource"
   }
  },
  "FargateServicestagingSecurityGroupfromApiStackStagingLBstagingSecurityGroup5BD92949300022F58DEA": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Load balancer to target",
    "FromPort": 3000,
    "GroupId": {
     "Fn::GetAtt": [
      "FargateServicestagingSecurityGroup4BCB28D2",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "LBstagingSecurityGroupB4F388F4",
      "GroupId"
     ]
    },
    "ToPort": 3000
   },
   "DependsOn": [
    "TaskDefstagingTaskRole37D75883"
   ],
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/FargateService-staging/SecurityGroup/from ApiStackStagingLBstagingSecurityGroup5BD92949:3000"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/81WS08bMRD+Ld1jZbZA1aritkkpioQgSiIORVHl2EMw8dpbP5bSKP+d8WOThZRL20MOUex5fPt5/M3snpYnXz6Vx+/ooz1ifHUkxaJcTx1lK4KmH2tgp+X6pmG366Kmv6rftjgr3hebORneqZvxkIz9Qgo29QsFDmNoS4WkCyGFe/quFcRoUrQNG/G8ZoKbgdRslfc1bRLIqLlWl9Qrdl+cOeOBFKJpPw9fhVNrxVKN0FNxbsDaazU0QJ3QKlEjB8IiEuH8iroL6uCRPhVnt+iZHwzBw2DxZpmixJKwwmqivYMZXUjY2Xe2ylrNRATeBofF+Wgc/nboZGxEi8v/rtg7Ku0B3MW/0TgcJgdCI6lwpBwYlEunoTT78q5yOC3va1COTIF5g3wvjPYNagvJ5kdxsMyIZguND5dSP1ZSXnu30F7xzDS3w0gtA6GJl3hwRGIUSUihI [...]
   },
   "Metadata": {
    "aws:cdk:path": "ApiStack-Staging/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "LoadBalancerDNSstaging": {
   "Value": {
    "Fn::GetAtt": [
     "LBstaging3F86DA4A",
     "DNSName"
    ]
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
